docs/envoy/v1.21.3/_sources/api-v3/extensions/network/dns_resolver/apple/v3/apple_dns_resolver.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/network/dns_resolver/apple/v3/apple_dns_resolver.proto:

apple DNS resolver
==================




.. _extension_envoy.network.dns_resolver.apple:

This extension may be referenced by the qualified name ``envoy.network.dns_resolver.apple``

.. note::
  

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.network.dns_resolver <extension_category_envoy.network.dns_resolver>`


.. _envoy_v3_api_msg_extensions.network.dns_resolver.apple.v3.AppleDnsResolverConfig:

extensions.network.dns_resolver.apple.v3.AppleDnsResolverConfig
---------------------------------------------------------------

:repo:`[extensions.network.dns_resolver.apple.v3.AppleDnsResolverConfig proto] <api/envoy/extensions/network/dns_resolver/apple/v3/apple_dns_resolver.proto#L16>`

Configuration for apple DNS resolver.



